--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="estilos.css" />
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos.css">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+   >
     <title>Todo Hielos</title>
   </head>
 
   <body>
     <header>
       <a href="index.html" class="nombre">
-        <img src="imagenes/copo_nieve.png" alt="Imagen de copo de nieve." />
+        <img src="imagenes/copo_nieve.png" alt="Imagen de copo de nieve.">
         <h1>Todo Hielos</h1>
       </a>
 
@@ -50,7 +51,7 @@
       </div>
     </section>
 
-    <hr />
+    <hr>
 
     <section class="content_center">
       <div class="border_bottom">
@@ -66,7 +67,7 @@
       </div>
     </section>
 
-    <hr />
+    <hr>
 
     <section class="content_center">
       <div class="border_bottom">
@@ -82,7 +83,7 @@
       </div>
     </section>
 
-    <hr />
+    <hr>
 
     <footer class="borde">
       <div class="borde">
