--- a/MODULOS/Contacto.html
+++ b/MODULOS/Contacto.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../CSS/Contacto.css" />
-    <link rel="stylesheet" href="../estilos.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/Contacto.css">
+    <link rel="stylesheet" href="../estilos.css">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+   >
     <title>Contacto</title>
   </head>
   <body>
     <header>
       <a href="../index.html" class="nombre">
-        <img src="../imagenes/copo_nieve.png" alt="Imagen de copo de nieve." />
+        <img src="../imagenes/copo_nieve.png" alt="Imagen de copo de nieve.">
         <h1>Todo Hielos</h1>
       </a>
 
@@ -29,13 +29,15 @@
     <section class="content_center">
       <div class="border_bottom">
         <h2 class="seccion">Datos de la empresa.</h2>
-        <li class="datos">Direccion: Calle Simpecado 3, Macarena, Sevilla</li>
-        <li class="datos">Numero de Telefono: +34 62483767</li>
-        <li class="datos">Email: Todo_HielosEM@gmail.com</li>
+        <ul>
+          <li class="datos">Direccion: Calle Simpecado 3, Macarena, Sevilla</li>
+          <li class="datos">Numero de Telefono: +34 62483767</li>
+          <li class="datos">Email: Todo_HielosEM@gmail.com</li>
+        </ul>
       </div>
     </section>
 
-    <hr />
+    <hr>
 
     <div class="mapa">
       <h2 class="mapa_title">Encuentranos</h2>
@@ -52,7 +54,7 @@
       ></iframe>
     </div>
 
-    <hr />
+    <hr>
 
     <footer class="borde">
       <div class="borde">
