--- a/MODULOS/Presupuesto.html
+++ b/MODULOS/Presupuesto.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../CSS/Presupuesto.css" />
-    <link rel="stylesheet" href="../estilos.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/Presupuesto.css">
+    <link rel="stylesheet" href="../estilos.css">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+   >
     <title>Presupuesto</title>
   </head>
   <body>
     <header>
       <a href="../index.html" class="nombre">
-        <img src="../imagenes/copo_nieve.png" alt="Imagen de copo de nieve." />
+        <img src="../imagenes/copo_nieve.png" alt="Imagen de copo de nieve.">
         <h1>Todo Hielos</h1>
       </a>
 
@@ -35,17 +35,17 @@
 
       <div class="form_inputs">
         <label class="form_label">
-          <input type="text" placeholder=" " pattern="[A-Za-z][ ]{2-20}" title="Usa solo letras." class="form_input" />
+          <input type="text" placeholder=" " pattern="[A-Za-z][ ]{2-20}" title="Usa solo letras." class="form_input" required>
           <span class="form_text">Ingresa tu Nombre</span>
         </label>
 
         <label class="form_label">
-          <input type="email" placeholder=" " pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" title="No olvides usar el @ y el .com" class="form_input" required />
+          <input type="email" placeholder=" " pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" title="No olvides usar el @ y el .com" class="form_input" required>
           <span class="form_text">Ingresa tu Correo electronico</span>
         </label>
 
         <label class="form_label">
-          <input type="tel" placeholder=" " pattern="[\d]{6,10}" title="Tu numero de telefono nos puede superar los 10 digitos o tener menos de 6." class="form_input" required />
+          <input type="tel" placeholder=" " pattern="[\d]{6,10}" title="Tu numero de telefono nos puede superar los 10 digitos o tener menos de 6." class="form_input" required>
           <span class="form_text">Ingresa tu numero de telefono</span>
         </label>
 
@@ -58,7 +58,7 @@
         ></textarea>
 
         <label>
-          <input type="checkbox" name="privacy_policy" required />
+          <input type="checkbox" name="privacy_policy" required>
           Acepto la
           <a class="input_checkbox" href="Presupuesto.html" target="_blank"
             >Política de privacidad</a
@@ -66,7 +66,7 @@
         </label>
       </div>
 
-      <input type="submit" value="Enviar" class="form_submit" />
+      <input type="submit" value="Enviar" class="form_submit">
     </form>
 
     <footer class="borde">
