--- a/MODULOS/Productos.html
+++ b/MODULOS/Productos.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../CSS/Productos.css" />
-    <link rel="stylesheet" href="../estilos.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/Productos.css">
+    <link rel="stylesheet" href="../estilos.css">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+   >
     <title>Productos</title>
   </head>
   <body>
     <header>
       <a href="../index.html" class="nombre">
-        <img src="../imagenes/copo_nieve.png" alt="Imagen de copo de nieve." />
+        <img src="../imagenes/copo_nieve.png" alt="Imagen de copo de nieve.">
         <h1>Todo Hielos</h1>
       </a>
 
@@ -32,119 +32,119 @@
 
     <div class="gallery_container">
       <div class="container_image">
-        <img src="../imagenes/arpa.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/arpa.jpg" width="426" height="640" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Arpa</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/cisne.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/cisne.jpg" width="736" height="1267" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Cisne</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/guitarra.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/guitarra.jpg" width="500" height="900" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Guitarra</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/pareja.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/pareja.jpg" width="720" height="960" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Amor de invierno</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/reno.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/reno.jpg" width="474" height="715" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Reno</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/aquario.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/aquario.jpg" width="480" height="640" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Capricornio</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/flamenco.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/flamenco.jpg" width="640" height="480" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Flamencos</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/voladores.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/voladores.jpg" width="736" height="787" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Peces voladores</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/sirena.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/sirena.jpg" width="576" height="922" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Sirena</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/pez.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/pez.jpg" width="720" height="1280" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Pez espada</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/perro.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/perro.jpg" width="338" height="500" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Perro</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/balet.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/balet.jpg" width="734" height="437" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Balet</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/grifo.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/grifo.jpg" width="720" height="542" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Grifo</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/pavo.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/pavo.jpg" width="735" height="908" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Pavo real</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/cupido.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/cupido.jpg" width="736" height="552" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Cupido</div>
         </div>
       </div>
 
       <div class="container_image">
-        <img src="../imagenes/dragon.jpg" alt="Avatar" class="image" />
+        <img src="../imagenes/dragon.jpg" width="427" height="640" alt="Avatar" class="image">
         <div class="overlay">
           <div class="text">Dragon oriental</div>
         </div>
       </div>
     </div>
 
-    <hr />
+    <hr>
 
     <footer class="borde">
       <div class="borde">
