correccion pattern de nombre

--- a/MODULOS/Presupuesto.html
+++ b/MODULOS/Presupuesto.html
@@ -35,7 +35,7 @@
 
       <div class="form_inputs">
         <label class="form_label">
-          <input type="text" placeholder=" " pattern="[A-Za-z][ ]{2,20}" title="Usa solo letras." class="form_input" required>
+          <input type="text" placeholder=" " pattern="[A-Za-zÁÉÍÓÚáéíóúÑñ\s]{2,20}" minlength="2" maxlength="20" title="Usa solo letras." class="form_input" required>
           <span class="form_text">Ingresa tu Nombre</span>
         </label>
 
